--- a/html/places.html
+++ b/html/places.html
@@ -24,22 +24,22 @@
     <p class="photo-descriptions">Here are some photos I've taken of the places that I have visited all over the world!</p>
     <div class="photo-container2">
         <div class="photo-categories">
-            <img src="/photos/places/1.jpg" alt="Photo of a fountain in Florida.">
+            <img src="../photos/places/1.jpg" alt="Photo of a fountain in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/2.jpg" alt="Photo of an entrance for a driveway in Florida.">
+            <img src="../photos/places/2.jpg" alt="Photo of an entrance for a driveway in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/3.jpg" alt="Photo of a house in Florida.">
+            <img src="../photos/places/3.jpg" alt="Photo of a house in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/4.jpg" alt="Photo of a crescent moon during sunset with a white fence.">
+            <img src="../photos/places/4.jpg" alt="Photo of a crescent moon during sunset with a white fence.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/5.jpg" alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/5.jpg" alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/6.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/6.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
             <img src="/photos/places/7.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
