--- a/html/places.html
+++ b/html/places.html
@@ -42,52 +42,52 @@
             <img src="../photos/places/6.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/7.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/7.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/8.jpg" alt="Photo of dam at the Philadelphia Museam of Art.">
+            <img src="../photos/places/8.jpg" alt="Photo of dam at the Philadelphia Museam of Art.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/9.jpg" alt="Photo of center city at sunset in Philadelphia, PA.">
+            <img src="../photos/places/9.jpg" alt="Photo of center city at sunset in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/10.jpg" alt="Photo of fresh snow in Philadelphia, PA.">
+            <img src="../photos/places/10.jpg" alt="Photo of fresh snow in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/11.jpg" alt="Photo of the concrete ceiling at the Museum of Natural History in New York.">
+            <img src="../photos/places/11.jpg" alt="Photo of the concrete ceiling at the Museum of Natural History in New York.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/12.jpg" alt="Photo of the sign at Red Rock State Park in Sedona, Arizona.">
+            <img src="../photos/places/12.jpg" alt="Photo of the sign at Red Rock State Park in Sedona, Arizona.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/13.jpg" alt="Wide view of the rocks at Red Rock State Park in Sedona, Arizona.">
+            <img src="../photos/places/13.jpg" alt="Wide view of the rocks at Red Rock State Park in Sedona, Arizona.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/14.jpg" alt="Photo of the Grand Canyon.">
+            <img src="../photos/places/14.jpg" alt="Photo of the Grand Canyon.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/15.jpg" alt="Photo of the Grand Canyon.">
+            <img src="../photos/places/15.jpg" alt="Photo of the Grand Canyon.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/16.jpg" alt="Photo of a waterfall at Yosemite National Park.">
+            <img src="../photos/places/16.jpg" alt="Photo of a waterfall at Yosemite National Park.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/17.jpg" alt="Action photo of a hummingbird on a flower in Jamaica.">
+            <img src="../photos/places/17.jpg" alt="Action photo of a hummingbird on a flower in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/18.jpg" alt="Photo of a hummingbird sitting on a branch in Jamaica.">
+            <img src="../photos/places/18.jpg" alt="Photo of a hummingbird sitting on a branch in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/19.jpg" alt="Photo of a stray cat taken in Jamaica.">
+            <img src="../photos/places/19.jpg" alt="Photo of a stray cat taken in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/20.jpg" alt="Photo of a table set at a sushi restaurant in Jamaica.">
+            <img src="../photos/places/20.jpg" alt="Photo of a table set at a sushi restaurant in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/21.jpg" alt="Photo of the sky during sunset in Long Beach Island, New Jersey.">
+            <img src="../photos/places/21.jpg" alt="Photo of the sky during sunset in Long Beach Island, New Jersey.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/places/22.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
+            <img src="../photos/places/22.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
         </div>
     </div>
 </body>
