--- a/html/places.html
+++ b/html/places.html
@@ -27,7 +27,7 @@
             <img src="../photos/places/1.jpg" alt="Photo of a fountain in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/2.jpg" alt="Photo of an entrance for a driveway in Florida.">
+            <img src="../photos/places/2-florida.jpg" alt="Photo of an entrance for a driveway in Florida.">
         </div>
         <div class="photo-categories">
             <img src="../photos/places/3.jpg" alt="Photo of a house in Florida.">
