--- a/html/portraits.html
+++ b/html/portraits.html
@@ -36,22 +36,22 @@
             <img src="/photos/portraits/4.jpg" alt="Photo of Selena posing in front of a large rock.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/portraits/5.jpg" alt="Photo of Sofia and Selena looking at each other from opposite sides of a tree.">
+            <img src="/photos/portraits/5-s&s.jpg" alt="Photo of Sofia and Selena looking at each other from opposite sides of a tree.">
         </div>
         <div class="photo-categories">
             <img src="/photos/portraits/6.jpg" alt="Photo of Selena applying lipstick at the Renaissance Faire.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/portraits/7.jpg" alt="Photo of the back of Selena's head wearing a crown at the Renaissance Faire.">
+            <img src="/photos/portraits/7-crown.jpg" alt="Photo of the back of Selena's head wearing a crown at the Renaissance Faire.">
         </div>
         <div class="photo-categories">
             <img src="/photos/portraits/8.jpg" alt="Photo of Selena dressed as a pirate, holding a chess piece at the Renaissance Faire.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/portraits/9.jpg" alt="Portrait Photo of Luna.">
+            <img src="/photos/portraits/9-luna.jpg" alt="Portrait Photo of Luna.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/portraits/10.jpg" alt="Portrait photo of Luna.">
+            <img src="/photos/portraits/10-luna.jpg" alt="Portrait photo of Luna.">
         </div>
     </div>
 </body>
