--- a/html/places.html
+++ b/html/places.html
@@ -30,19 +30,19 @@
             <img src="../photos/places/2-florida.jpg" alt="Photo of an entrance for a driveway in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/3.jpg" alt="Photo of a house in Florida.">
+            <img src="../photos/places/3-florida.jpg" alt="Photo of a house in Florida.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/4.jpg" alt="Photo of a crescent moon during sunset with a white fence.">
+            <img src="../photos/places/4-beach.jpg" alt="Photo of a crescent moon during sunset with a white fence.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/5.jpg" alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/5-koi.jpg" alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/6.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/6-buddha.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/7.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
+            <img src="../photos/places/7-shofuso.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
         </div>
         <div class="photo-categories">
             <img src="../photos/places/8.jpg" alt="Photo of dam at the Philadelphia Museam of Art.">
@@ -75,19 +75,19 @@
             <img src="../photos/places/17.jpg" alt="Action photo of a hummingbird on a flower in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/18.jpg" alt="Photo of a hummingbird sitting on a branch in Jamaica.">
+            <img src="../photos/places/18-hummingbird.jpg" alt="Photo of a hummingbird sitting on a branch in Jamaica.">
         </div>
         <div class="photo-categories">
             <img src="../photos/places/19.jpg" alt="Photo of a stray cat taken in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/20.jpg" alt="Photo of a table set at a sushi restaurant in Jamaica.">
+            <img src="../photos/places/20-tables.jpg" alt="Photo of a table set at a sushi restaurant in Jamaica.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/21.jpg" alt="Photo of the sky during sunset in Long Beach Island, New Jersey.">
+            <img src="../photos/places/21-sunset.jpg" alt="Photo of the sky during sunset in Long Beach Island, New Jersey.">
         </div>
         <div class="photo-categories">
-            <img src="../photos/places/22.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
+            <img src="../photos/places/22-lake.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
         </div>
     </div>
 </body>
