--- a/html/sae.html
+++ b/html/sae.html
@@ -26,16 +26,16 @@
     </p>
     <div class="photo-container2">
         <div class="photo-categories">
-            <img src="/photos/sae/1.jpg" alt="Photo of a Hoosier tire on the electric car.">
+            <img src="/photos/sae/1-tire.jpg" alt="Photo of a Hoosier tire on the electric car.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/sae/2.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
+            <img src="/photos/sae/2-owen.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/sae/3.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
+            <img src="/photos/sae/3-owen.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
         </div>
         <div class="photo-categories">
-            <img src="/photos/sae/4.jpg" alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car.">
+            <img src="/photos/sae/4-jack.jpg" alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car.">
         </div>
     </div>
 </body>
