--- a/html/photos.html
+++ b/html/photos.html
@@ -39,6 +39,8 @@
           <i class="bx bxs-envelope"></i>
         </a>
       </div>
+    </div>
+  </footer>
     <script src="../script/photos.js"></script>
 </body>
 </html>
