--- a/html/projects.html
+++ b/html/projects.html
@@ -20,6 +20,21 @@
         </nav>
       </header>
     <h1>Projects</h1>
-    </div>
+    <footer>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" 
+            <i class="bx bxl-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/sophiabartolacci/"
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu"
+            <i class="bx bxs-envelope"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
