--- a/html/sae.html
+++ b/html/sae.html
@@ -38,5 +38,21 @@
             <img src="/photos/sae/4-jack.jpg" alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car.">
         </div>
     </div>
+    <footer>
+        <div class="footer">
+          <h2 class="contact">Contact</h2>
+          <div class="links">
+            <a href="https://github.com/sophiabartolacci" 
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="mailto:slb522@drexel.edu"
+              <i class="bx bxs-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
