--- a/html/places.html
+++ b/html/places.html
@@ -90,5 +90,21 @@
             <img src="../photos/places/22-lake.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
         </div>
     </div>
+    <footer>
+        <div class="footer">
+          <h2 class="contact">Contact</h2>
+          <div class="links">
+            <a href="https://github.com/sophiabartolacci" 
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="mailto:slb522@drexel.edu"
+              <i class="bx bxs-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
