--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
           </ul>
         </nav>
       </header>
+      <footer>
+        <div class="footer">
+          <h2 class="contact">Contact</h2>
+          <div class="links">
+            <a href="https://github.com/sophiabartolacci" 
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="mailto:slb522@drexel.edu"
+              <i class="bx bxs-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
