--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -20,6 +21,7 @@
         </nav>
       </header>
     <h1>About Me</h1>
+    <p class="description">I'm a computer science student studying at <a href="https://www.online.drexel.edu/" target="_blank">Drexel University</a>.</p>
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
