add boxicons in <head>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sophia Bartolacci</title>
     <link rel="icon" type="image/x-icon" href="/favicon_ico/favicon.ico">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -19,8 +20,8 @@
           </ul>
         </nav>
       </header>
+      <h1>Hi! I'm Sophia.</h1>
       <footer>
-        <div class="footer">
           <h2 class="contact">Contact</h2>
           <div class="links">
             <a href="https://github.com/sophiabartolacci" 
@@ -33,7 +34,6 @@
               <i class="bx bxs-envelope"></i>
             </a>
           </div>
-        </div>
       </footer>
 </body>
 </html>
