--- a/html/sae.html
+++ b/html/sae.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Drexel Electric Racing</title>
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="../styles/style.css" rel="stylesheet" type="text/css">
         <link href="../styles/photos.css" rel="stylesheet" type="text/css">
     </head>
