--- a/html/places.html
+++ b/html/places.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Places</title>
-        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="../styles/style.css" rel="stylesheet" type="text/css">
         <link href="../styles/photos.css" rel="stylesheet" type="text/css">
