--- a/html/places.html
+++ b/html/places.html
@@ -12,15 +12,26 @@
     </head>
 <body>
     <header>
+        <a href="/" class="home">Sophia Bartolacci</a>
         <nav class="nav-bar">
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./photos.html">Photography</a></li>
+            <ul class="nav-center">
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./resume.html">Resume</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./photos.html">Photography</a></li>
+              </ul>
+          <ul class="nav-right">
+            <li>
+              <b>
+                <label class="theme-switch">
+                  <input type="checkbox" id="theme-toggle" />
+                  <span class="slider"></span>
+                </label>
+              </b>
+            </li>
           </ul>
         </nav>
-      </header>
+        </header>
     <h1>Places</h1>
     <p class="photo-descriptions">Here are some photos I've taken of the places that I have visited all over the world!</p>
     <div class="photo-container2">
@@ -107,5 +118,6 @@
           </div>
         </div>
       </footer>
+      <script src="../script/darkMode.js"></script>
 </body>
 </html>
