--- a/html/portraits.html
+++ b/html/portraits.html
@@ -11,16 +11,27 @@
         <link href="../styles/photos.css" rel="stylesheet" type="text/css">
     </head>
 <body>
-    <header>
-        <nav class="nav-bar">
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./photos.html">Photography</a></li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <a href="/" class="home">Sophia Bartolacci</a>
+    <nav class="nav-bar">
+      <ul class="nav-center">
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./resume.html">Resume</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./photos.html">Photography</a></li>
+      </ul>
+      <ul class="nav-right">
+        <li>
+          <b>
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle" />
+              <span class="slider"></span>
+            </label>
+          </b>
+        </li>
+      </ul>
+    </nav>
+    </header>
     <h1>Portraits</h1>
     <p class="photo-descriptions">Here are some portraits I've taken of my friends and family on our fun adventures!</p>
     <div class="photo-container2">
@@ -71,5 +82,6 @@
           </div>
         </div>
       </footer>
+      <script src="../script/darkMode.js"></script>
 </body>
 </html>
