--- a/html/projects.html
+++ b/html/projects.html
@@ -10,16 +10,27 @@
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <nav class="nav-bar">
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./photos.html">Photography</a></li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <a href="/" class="home">Sophia Bartolacci</a>
+    <nav class="nav-bar">
+      <ul class="nav-center">
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./resume.html">Resume</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./photos.html">Photography</a></li>
+      </ul>
+      <ul class="nav-right">
+        <li>
+          <b>
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle" />
+              <span class="slider"></span>
+            </label>
+          </b>
+        </li>
+      </ul>
+    </nav>
+    </header>
     <h1>Projects</h1>
     <footer>
       <div class="footer">
@@ -37,5 +48,6 @@
         </div>
       </div>
     </footer>
+    <script src="../script/darkMode.js"></script>
 </body>
 </html>
