--- a/html/resume.html
+++ b/html/resume.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photos</title>
+    <title>Resume</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/photos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -32,27 +31,23 @@
       </ul>
     </nav>
     </header>
-    <h1>Photography</h1>
-    <p class="photo-descriptions">Here are some of the photos I've taken recently!</p>
-    <div class="photo-container" id="gallery">
-    </div>
-  <footer>
-    <div class="footer">
-      <h2 class="contact">Contact</h2>
-      <div class="links">
-        <a href="https://github.com/sophiabartolacci" 
-          <i class="bx bxl-github"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/sophiabartolacci/"
-          <i class="bx bxl-linkedin-square"></i>
-        </a>
-        <a href="mailto:slb522@drexel.edu"
-          <i class="bx bxs-envelope"></i>
-        </a>
+    <h1>Resume</h1>
+    <footer>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" 
+            <i class="bx bxl-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/sophiabartolacci/"
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu"
+            <i class="bx bxs-envelope"></i>
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
-    <script src="../script/photos.js"></script>
+    </footer>
     <script src="../script/darkMode.js"></script>
 </body>
 </html>
