added projects, images, fixed nav bar

--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/about.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -22,6 +23,13 @@
       <ul class="nav-right">
         <li>
           <b>
+            <label class="empty">
+               an empty box
+            </label>
+          </b>
+        </li>
+        <li>
+          <b>
             <label class="theme-switch">
               <input type="checkbox" id="theme-toggle" />
               <span class="slider"></span>
@@ -32,7 +40,14 @@
     </nav>
     </header>
     <h1>About Me</h1>
-    <p class="description">I'm a computer science student studying at <a href="https://www.online.drexel.edu/" target="_blank">Drexel University</a>.</p>
+      <div class="container">
+        <h2 class="subtitle">I'm a Computer Science student studying at <a href="https://www.online.drexel.edu/" target="_blank">Drexel University</a>.</h2>
+      <div class="description-container">
+        <p class="description">At Drexel, I am also pursuing minors in Data Science and UI/UX Design.</p>
+        <p class="description">Outside of school, photography has been a passion of mine for as long as I can remember. I love finding beauty in everyday life, and the feeling you get when you get the perfect shot.
+        </p>
+      </div>
+    </div> 
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
