--- a/html/giant.html
+++ b/html/giant.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/projects.css" rel="stylesheet" type="text/css">
+    <link href="../styles/giant.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -39,22 +39,16 @@
       </ul>
     </nav>
     </header>
-    <h1>Projects</h1>
-    <div class="link-boxes">
-        <a href="./giant.html" class="link-box"> 
-          <span class="above-text">Figma</span> 
-          <div class="box-title">Redesign of GIANT's App</div>
-          <img src="../images/giant.png" alt="Giant App">
-        </a>
-        <a href="./blueboard.html" class="link-box">
-          <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
-          <div class="box-title">Blueboard</div>
-          <img src="../images/blueboard-login.png" alt="Giant App">
-        </a>
-        <a href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html" class="link-box">
-          <div class="box-title">Animal Crossing State Machine</div>
-        </a>
-      </div>
+    <h1>GIANT App Redesign</h1>
+    <div>
+      <h2 class="subtitle">Summary</h2>
+    </div>
+    <div>
+      <p class="description">I took on the challenge of redesigning GIANT's app using Figma to address the usability issues I noticed as a frequent user. The original app's navigation and overall design felt cluttered and unintuitive, so I set out to create a cleaner, more user-friendly interface. </p>
+      <p class="description">
+        My redesign focused on streamlining navigation, enhancing the visual hierarchy, and improving the overall user experience. This project was my first experience with Figma, driven by a desire to learn the tool and apply my design skills to a real-world scenario. </p>
+    </div>
+
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
