--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
+    <link href="./styles/projects.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
@@ -20,6 +21,13 @@
           <li><a href="./html/photos.html">Photography</a></li>
         </ul>
         <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty">
+                 empty box
+              </label>
+            </b>
+          </li>
           <li>
             <b>
               <label class="theme-switch">
