--- a/html/portraits.html
+++ b/html/portraits.html
@@ -23,6 +23,13 @@
       <ul class="nav-right">
         <li>
           <b>
+            <label class="empty">
+               empty box
+            </label>
+          </b>
+        </li>
+        <li>
+          <b>
             <label class="theme-switch">
               <input type="checkbox" id="theme-toggle" />
               <span class="slider"></span>
