9/8/24 - add more to projects tab

--- a/html/blueboard.html
+++ b/html/blueboard.html
@@ -24,7 +24,7 @@
         <li>
           <b>
             <label class="empty">
-               empty box
+               this empty box
             </label>
           </b>
         </li>
@@ -46,17 +46,34 @@
         <img src="../images/blueboard-login.png" alt="Blueboard Login Screen" class="login-image">
     </div>
     <div class="link-boxes">
+      <div class="link-box">
+          <div class="description">
+              <p></p>
+          </div>
+      </div>
+      <div class="link-box">
+          <div>
+              <p class="website">Explore our full website 
+                <a href="https://cs375blueboard.fly.dev/" target="_blank">here</a>!
+            </p>
+          </div>
+      </div>
+      <div class="link-box">
+        <div class="description">
+            <p></p>
+        </div>
+      </div>
         <div class="link-box">
             <div class="box-title">Overview</div>
-            <div class="features">
-                <p>In my web development class, I collaborated with a group of five over a five weeks to create <a href="https://cs375blueboard.fly.dev/" target="_blank">Blueboard</a>, an interactive online learning platform designed for both students and professors.</p> 
+            <div class="description">
+                <p>In my web development class, I collaborated with a group of five over five weeks to create <a href="https://cs375blueboard.fly.dev/" target="_blank">Blueboard</a>, an interactive online learning platform designed for both students and professors.</p> 
                 <p>Blueboard offers a variety of tools to enhance the learning experience, including quizzes, course materials, and more.</p> 
                 <p>This project allowed us to work together to design and implement a user-friendly platform that supports both teaching and learning.</p>
             </div>
         </div>
         <div class="link-box"> 
             <div class="box-title">Features</div>
-            <div class="features">
+            <div class="description">
                 <ul>
                     <li><strong>User Authentication: </strong>Professors and students can create accounts and log in securely.</li>
                     <li><strong>Quiz Creation and Management: </strong>Professors can create quizzes with various question types, including multiple-choice, short answer, long answer, and image upload. Quizzes can be autograded or manually graded.</li>
@@ -70,7 +87,7 @@
         </div>
         <div class="link-box">
             <div class="box-title">Technology Stack</div>
-            <div class="features">
+            <div class="description">
                 <ul>
                     <li><strong>Backend: </strong>Node.js, Express.js</li>
                     <li><strong>Frontend: </strong>HTML, CSS, Javascript</li>
@@ -85,12 +102,12 @@
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" 
-            <i class="bx bxl-github"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/sophiabartolacci/"
-            <i class="bx bxl-linkedin-square"></i>
-          </a>
+          <a href="https://github.com/sophiabartolacci" target="_blank"
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
           <a href="mailto:slb522@drexel.edu"
             <i class="bx bxs-envelope"></i>
           </a>
