--- a/html/projects.html
+++ b/html/projects.html
@@ -49,22 +49,24 @@
         <a href="./blueboard.html" class="link-box">
           <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
           <div class="box-title">Blueboard</div>
-          <img src="../images/blueboard-login.png" alt="Giant App">
+          <img src="../images/blueboard-login.png" alt="Login Page for Blueboard">
         </a>
-        <a href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html" class="link-box">
+        <a href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html" target="_blank" class="link-box">
+          <span class="above-text">A Project From My First Computer Science Class</span> 
           <div class="box-title">Animal Crossing State Machine</div>
+          <img src="../images/animal-crossing.jpeg" alt="Animal Crossing Project Image">
         </a>
       </div>
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" 
-            <i class="bx bxl-github"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/sophiabartolacci/"
-            <i class="bx bxl-linkedin-square"></i>
-          </a>
+          <a href="https://github.com/sophiabartolacci" target="_blank"
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
           <a href="mailto:slb522@drexel.edu"
             <i class="bx bxs-envelope"></i>
           </a>
