--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sophia Bartolacci</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon_io/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <link href="./styles/projects.css" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
           <li>
             <b>
               <label class="empty">
-                 empty box
+                 this empty box
               </label>
             </b>
           </li>
@@ -48,10 +48,10 @@
       <footer>
           <h2 class="contact">Contact</h2>
           <div class="links">
-            <a href="https://github.com/sophiabartolacci" 
+            <a href="https://github.com/sophiabartolacci" target="_blank"
               <i class="bx bxl-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/"
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
               <i class="bx bxl-linkedin-square"></i>
             </a>
             <a href="mailto:slb522@drexel.edu"
