--- a/html/photos.html
+++ b/html/photos.html
@@ -24,7 +24,7 @@
         <li>
           <b>
             <label class="empty">
-               empty box
+               this empty box
             </label>
           </b>
         </li>
@@ -47,12 +47,12 @@
     <div class="footer">
       <h2 class="contact">Contact</h2>
       <div class="links">
-        <a href="https://github.com/sophiabartolacci" 
-          <i class="bx bxl-github"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/sophiabartolacci/"
-          <i class="bx bxl-linkedin-square"></i>
-        </a>
+        <a href="https://github.com/sophiabartolacci" target="_blank"
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
         <a href="mailto:slb522@drexel.edu"
           <i class="bx bxs-envelope"></i>
         </a>
