--- a/html/portraits.html
+++ b/html/portraits.html
@@ -77,10 +77,10 @@
         <div class="footer">
           <h2 class="contact">Contact</h2>
           <div class="links">
-            <a href="https://github.com/sophiabartolacci" 
+            <a href="https://github.com/sophiabartolacci" target="_blank"
               <i class="bx bxl-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/"
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
               <i class="bx bxl-linkedin-square"></i>
             </a>
             <a href="mailto:slb522@drexel.edu"
