--- a/html/resume.html
+++ b/html/resume.html
@@ -44,12 +44,12 @@
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" 
-            <i class="bx bxl-github"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/sophiabartolacci/"
-            <i class="bx bxl-linkedin-square"></i>
-          </a>
+          <a href="https://github.com/sophiabartolacci" target="_blank"
+              <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
+              <i class="bx bxl-linkedin-square"></i>
+            </a>
           <a href="mailto:slb522@drexel.edu"
             <i class="bx bxs-envelope"></i>
           </a>
